@@ -15,3 +15,10 @@ if click.__version__ >= '3.0':
         assert result.exit_code == 0
         assert 'WAT' in result.output
         assert 'Invoked legacy parameter callback' in result.output
+
+
+def test_bash_func_name():
+    from click._bashcomplete import get_completion_script
+    script = get_completion_script('foo-bar baz_blah', '_COMPLETE_VAR').strip()
+    assert script.startswith('_foo_barbaz_blah_completion()')
+    assert '_COMPLETE_VAR=complete $1' in script
