@@ -26,6 +26,8 @@ Version 4.0
 - Added support for custom subclasses to `option` and `argument`.
 - Fix bug in ``clear()`` on Windows when colorama is installed.
 - Reject ``nargs=-1`` for options properly.  Options cannot be variadic.
+- Fixed an issue with bash completion not working properly for commands with
+  non ASCII characters or dashes.
 
 Version 3.3
 -----------
